[gd_scene load_steps=8 format=3 uid="uid://btjmcn186pg8e"]

[ext_resource type="Script" path="res://ui/hud.gd" id="1_044wd"]
[ext_resource type="Script" path="res://ui/canvas_layer.gd" id="1_clwmy"]
[ext_resource type="Texture2D" uid="uid://rsfj2l2m4kxo" path="res://texture/Guns/gun1.png" id="2_5tlpu"]
[ext_resource type="FontFile" uid="uid://jgabob6qnqud" path="res://fonts/SmileySans-Oblique.ttf" id="4_5dma6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k0qly"]
bg_color = Color(0.0509804, 0.0509804, 0.0509804, 0.368627)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1qmwt"]
bg_color = Color(0.510973, 0.71323, 0.3156, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y38g4"]
bg_color = Color(0.152941, 0.152941, 0.152941, 0.517647)
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
anti_aliasing = false

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_clwmy")

[node name="HUD" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_044wd")

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
layout_mode = 0
offset_right = 177.0
offset_bottom = 24.0
theme_override_constants/margin_left = 9
theme_override_constants/margin_top = 7

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/MarginContainer"]
custom_minimum_size = Vector2(0, 13)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 1

[node name="HpLabel" type="Label" parent="HUD/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 13)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_5dma6")
theme_override_font_sizes/font_size = 10
text = "HP："

[node name="HpBar" type="ProgressBar" parent="HUD/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(120, 12)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.113725, 0.278431, 0.0705882, 0.686275)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_5dma6")
theme_override_font_sizes/font_size = 8
theme_override_styles/background = SubResource("StyleBoxFlat_k0qly")
theme_override_styles/fill = SubResource("StyleBoxFlat_1qmwt")
value = 100.0

[node name="WeaponHUD" type="Control" parent="HUD"]
custom_minimum_size = Vector2(175, 57)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -170.0
offset_top = -57.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/WeaponHUD"]
custom_minimum_size = Vector2(125, 60)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -60.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 0

[node name="Bullet" type="Label" parent="HUD/WeaponHUD/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 60)
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("4_5dma6")
theme_override_font_sizes/font_size = 10
text = "30/30"
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="HUD/WeaponHUD/HBoxContainer"]
custom_minimum_size = Vector2(75, 60)
layout_mode = 2
size_flags_horizontal = 2

[node name="WeaponTexture" type="TextureRect" parent="HUD/WeaponHUD/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_5tlpu")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="HUD/WeaponHUD/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="WeaponName" type="Label" parent="HUD/WeaponHUD/HBoxContainer/MarginContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 13)
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_5dma6")
theme_override_font_sizes/font_size = 10
text = "武器名称"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1

[node name="LevelLabel" type="Label" parent="HUD"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 25)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_5dma6")
theme_override_styles/normal = SubResource("StyleBoxFlat_y38g4")
text = "关卡 1"
horizontal_alignment = 1
vertical_alignment = 1
